--- a/index.css
+++ b/index.css
@@ -8,39 +8,16 @@ body{
     color:#34495e;
     
 }
-
-.js-clock{
+.container{
+    display: flex;
     position: absolute;
-    top:5px;
-    left:920px;
-    color:#dfe6e9;
+    left:870px;
+    top:20px;
+    flex-direction: column;
+    justify-content: center;
 }
 .js-clock h1{
-  
-}
-h4{
-    position: absolute;
-    top:70px;
-    left:930px;
-}
-.js-toDoList{
-    position: absolute;
-    top:130px;
-    left:910px;
-}
-.js-toDoList li span{
-    font-size:x-large;
-    color:white;
-}
-.js-weather{
-    position: absolute;
-    top:5px;
-    left:88%;
-}
-input{
-    position: absolute;
-    top:120px;
-    left:900px;
+    font-size:40px;
 }
 .form,
 .greetings{
