--- a/index.css
+++ b/index.css
@@ -9,26 +9,99 @@ body{
     
 }
 .container{
-    display: flex;
+    position: relative;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 900px;
+  
+    z-index: 0;
+}
+.js-clock {
     position: absolute;
-    left:870px;
-    top:20px;
-    flex-direction: column;
-    justify-content: center;
+    top:50px;
+    left:43%;
 }
 .js-clock h1{
-    font-size:40px;
+    font-size:80px;
 }
+
 .form,
 .greetings{
     display: none;
+    position: absolute;
+    top:240px;
+    left:47%;
+    font-size: x-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .showing{
     display: block;
+    position: absolute;
+    top:240px;
+    left:47.5%;
+ 
+}
+
+.js-toDoForm {
+    position: absolute;
+    top:300px;
+    left:46%;
+}
+
+.js-toDoForm input[type=text]{
+    width: 100%;
+    border:2px solid #aaa;
+    border-radius:4px;
+    margin:8px 0;
+    outline: none;
+    box-sizing: border-box;
+    transition:.3s; 
+}:focus{
+    border-color:dodgerBlue;
+    box-shadow: 0 0 8px 0 dodgerBlue
+}
+
+.js-toDoList{
+    position: absolute;
+    top:400px;
+    left:890px;
+}
+.delButton{
+    background: none;
+    color:#ccc;
+    width:75px;
+    height: 30px;
+    border:1px solid #338033;
+    margin-top: 10px;
+    margin-right: 8px;
+    font-size:10px;
+    border-radius: 4px;
+    transition: .6s;
+    overflow: hidden;
+
+
+}
+
+.delButton:focus{
+    outline: none;
 }
 
 
+.delButton:hover{
+    background:#338033;
+    cursor: pointer;
+}
+
+.contentText{
+    color: #2980b9
+}
+.js-weather{
+    position: absolute;
+    right: 10%;
+    top:3%;
+}
 
 @keyframes fadeIn {
     from {
