--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body{
     font-size:80px;
 }
 
-.form,
+/* .form,
 .greetings{
     display: none;
     position: absolute;
@@ -40,10 +40,44 @@ body{
     display: block;
     position: absolute;
     top:240px;
-    left:47.5%;
+    left:47.4%;
  
 }
+.showing input[type=text]{
+    width: 100%;
+    border:2px solid #aaa;
+    border-radius:4px;
+    margin:8px 0;
+    outline: none;
+    box-sizing: border-box;
+    transition:.3s; 
+}:focus{
+    border-color:dodgerBlue;
+    box-shadow: 0 0 8px 0 dodgerBlue
+} */
+.form,
+.greetings{
+    display: none;
+    position: absolute;
+    top:240px;
+    left:47%;
+    font-size: x-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}/*form 이랑 greetings 클래스는 같은 css 적용*/
 
+.showingname{
+    display: block;
+    position: absolute;
+    top:240px;
+    left:43.5%;
+ 
+}
+.showinggreeting{
+    display: block;
+    position: absolute;
+    top:240px;
+    left:47.4%;
+}
 .js-toDoForm {
     position: absolute;
     top:300px;
@@ -95,7 +129,7 @@ body{
 }
 
 .contentText{
-    color: #2980b9
+    color:black
 }
 .js-weather{
     position: absolute;
